fix #3179: cut off radios and checkboxes

--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -873,8 +873,8 @@ input[type="hidden"] {
 
 .radio,
 .checkbox {
+  min-height: 18px;
   padding-left: 18px;
-  overflow: auto;
 }
 
 .radio input[type="radio"],
